--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Alli Koch</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying Ministry and Leadership with a minor in 
+            Creative Writing. I work for CDC daycare on campus.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Morningside Baptist Church in Greenville, SC. My favorite website is  
+            <a href="https://apps.bju.edu/campusdirectory"/>here</a>, and you can email me  
+            <a href="akoch772@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music, having deep conversations, and playing board games.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Ministry and Leadership<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
+        <img src="https://images.search.yahoo.com/search/images;_ylt=AwriivdbCBBmB0IDTIWJzbkF;_ylu=c2VjA3NlYXJjaARzbGsDYXNzaXN0;_ylc=X1MDOTYwNjI4NTcEX3IDMgRmcgNtY2FmZWUEZnIyA3NhLWdwLXNlYXJjaARncHJpZANCN1RqQU9kdlJuZXBQUjdYTXQzellBBG5fcnNsdAMwBG5fc3VnZwMxMARvcmlnaW4DaW1hZ2VzLnNlYXJjaC55YWhvby5jb20EcG9zAzEEcHFzdHIDQm9iIEpvbmVzIARwcXN0cmwDMTAEcXN0cmwDMjAEcXVlcnkDYm9iJTIwam9uZXMlMjB1bml2ZXJzaXR5BHRfc3RtcAMxNzEyMzI2NzU2BHVzZV9jYXNlAw--?p=bob+jones+university&fr=mcafee&fr2=sa-gp-search&ei=UTF-8&x=wrt&type=E210US105G0#id=2&iurl=https%3A%2F%2Fwww.campuspride.org%2Fwp-content%2Fuploads%2FBob-Jones-University-782x587.jpg&action=click" />
     </div>
 </body>
 </html>
